# vidvault-rs

./: .gitignore  README.md  index.html  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pipeline.rs  state.rs  video_protocol.rs  video_server.rs  watcher.rs
src/assets/: main.css
src/assets/fonts/: fonts.css
src/components/: EmptyState.vue  GalleryPanel.vue  TitleBar.vue  VideoModal.vue  VideoSkeleton.vue
src/composables/: useFavorites.js  useLocale.js  useTheme.js  useVideoLibrary.js  useVirtualMasonry.js  useVolume.js
src/locales/: en.js  es.js
src/styles/: globals.css
src/utils/: format.js
