[package]
name = "vidvault"
version = "0.1.0"
description = "VidVault — local video library"
authors = []
edition = "2021"

[lib]
name = "vidvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vidvault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog      = "2"
tauri-plugin-shell       = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance   = "2"
window-vibrancy = "0.5"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
sha1        = "0.10"
hex         = "0.4"
dirs        = "5"
notify      = { version = "6", features = [] }
axum        = { version = "0.7", features = [] }
tower-http  = { version = "0.5", features = ["fs"] }
tokio-util  = { version = "0.7", features = ["io"] }

[profile.release]
panic  = "abort"
codegen-units = 1
lto    = true
opt-level = 3
strip  = true
